# DIscordProfilePictureRotator

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
discord/: __init__.py  set_profile_picture.py
