[tool.poetry]
name = "discordprofilepicturerotator"
version = "0.1.0"
description = ""
authors = ["thearyadev <personal@aryankothari.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
python-dotenv = "^1.0.0"
rich = "^13.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

